[package]
name = "imx"
version = "0.1.18"
edition = "2024"
description = "A library for image processing and manipulation"
license = "MIT"
repository = "https://github.com/rakki194/imx"
homepage = "https://github.com/rakki194/imx"
documentation = "https://docs.rs/imx"
keywords = ["image", "processing", "manipulation", "graphics", "multimedia"]
categories = ["multimedia::images", "graphics", "multimedia"]

[dependencies]
anyhow = { version = "1.0.96", features = ["backtrace"] }
image = { version = "0.25.5", features = ["png"] }
log = "0.4.26"
tokio = { version = "1.43.0", features = ["full"] }
jxl-oxide = { version = "0.11.2", features = ["image"] }
fontdue = "0.9.3"
rgb = "0.8.50"

[dev-dependencies]
tempfile = "3.17.1"
