[package]
name = "imx"
version = "0.1.20"
edition = "2024"
description = "A library for image processing and manipulation"
license = "MIT"
repository = "https://github.com/rakki194/imx"
homepage = "https://github.com/rakki194/imx"
documentation = "https://docs.rs/imx"
keywords = ["image", "processing", "manipulation", "graphics", "multimedia"]
categories = ["multimedia::images", "graphics", "multimedia"]

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
image = { version = "0.25.6", features = ["png"] }
log = "0.4.27"
tokio = { version = "1.44.1", features = ["full"] }
jxl-oxide = { version = "0.11.4", features = ["image"] }
fontdue = "0.9.3"
rgb = "0.8.50"

[dev-dependencies]
tempfile = "3.19.1"
